-
Bug
-
Resolution: Fixed
-
P2: Important
-
6.5.3
-
-
a8118caad (dev), 8e437b7bc (6.6), 97bf1b914 (tqtc/lts-6.5)
Build fails with a build error in:
path/to/Qt/6.5.3/Src/qtbase/src/plugins/platforms/qnx/qqnxintegration.h:142:22: error: field 'm_windowMapper' has incomplete type 'QQnxWindowMapper' {aka 'QHash<_screen_window*, QWindow*>'}
QQnxWindowMapper m_windowMapper;
^~~~~~~~~~~~~~
Adding an include for qhash.h does seem to help.