Remove forward declared QHash

Fixes the complication issue since the typedef was used as class member.
Replace the typedef with using statement.

Fixes: QTBUG-118627
Pick-to: 6.5
Change-Id: Ie3d341fb8f18a7341d018f51947127ace941a620
Reviewed-by: James McDonnell <jmcdonnell@blackberry.com>
Reviewed-by: Ivan Solovev <ivan.solovev@qt.io>
(cherry picked from commit a8118caad6bec23699fbfd007fa1c0ba45d79277)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>